--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>KCal</title>
+    <head>
+      <title>KCal</title>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="theme-color" content="#333333" />
+      <meta
+        name="description"
+        content="An app that helps you keep track of your daily nutrients"
+      />
+      <meta
+        name="keywords"
+        content="nutrients,pwa,offline,mobile,web,android,ios,desktop"
+      />
+      <meta name="author" content="Sergei Kobzev" />
+      <meta name="application-name" content="KCal" />
+      <link rel="icon" href="favicon.ico" />
+    </head>
   </head>
-  <body>
-    <main id="app"></main>
-  </body>
+  <body id="app"></body>
 </html>
