--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <head>
       <title>KCal</title>
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta
+        name="viewport"
+        content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"
+      />
       <meta name="theme-color" content="#333333" />
       <meta
         name="description"
