--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         name="viewport"
         content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"
       />
-      <meta name="theme-color" content="#333333" />
+      <meta name="theme-color" content="#31363B" />
       <meta
         name="description"
         content="An app that helps you keep track of your daily nutrients"
