Change the app's name

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kcal</title>
+    <title>MaPoop</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -18,7 +18,7 @@
       content="nutrients,pwa,offline,mobile,web,android,ios,desktop"
     />
     <meta name="author" content="Sergei Kobzev" />
-    <meta name="application-name" content="KCal" />
+    <meta name="application-name" content="MaPoop" />
     <link rel="icon" href="favicon.ico" />
   </head>
   <body id="app"></body>
