Update app appearance

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
       content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"
     />
     <meta name="theme-color" content="#31363B" />
+    <meta name="theme-color" content="#F9F9F9" media="(prefers-color-scheme: light)"/>
     <meta
       name="description"
-      content="An app that helps you keep track of your daily nutrients"
+      content="An app that helps you to track your daily nutrients consumption"
     />
     <meta
       name="keywords"
