--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"
     />
-    <meta name="theme-color" content="#31363B" />
-    <meta name="theme-color" content="#F9F9F9" media="(prefers-color-scheme: light)"/>
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
     <meta
       name="description"
       content="An app that helps you to track your daily nutrients consumption"
